--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ display: inline;
   padding: 2% 3%;
 }
 
+.iframe {
+  width: 95%;
+}
+
 .mainFooter {
   width: 100%;
   height: 40px;
@@ -149,6 +153,12 @@ display: inline;
   display: none;
 }
 
+
+.iframe {
+  width: 90%;
+  height: 200px;
+}
+
 }
 /*End responsive tablets */
 
@@ -172,7 +182,7 @@ body {
 }
 
 .topNav {
-  height: 120px;
+  height: 160px;
 }
 
 .topNav ul {
@@ -207,6 +217,10 @@ body {
   width: 95%;
   margin: 3% 0 2% 0%;
   padding: 2% 3%;
+}
+
+.iframe {
+  width: 95% !important;
 }
 
 }
