--- a/style.css
+++ b/style.css
@@ -222,6 +222,10 @@ body {
 .iframe {
   width: 95% !important;
 }
+.email-picture {
+  width: 15%;
+  height: 100%;
+}
 
 }
 /* End responsive phones */
@@ -259,43 +263,94 @@ body {
 /*end countdown jquery*/
 
 /*!! Plugin Share buttons !!*/
-.addthis_inline_share_toolbox_t0le, .email-picture{
+.addthis_inline_share_toolbox_t0le ,.email-picture{
   margin: 7px 1px 1px 5px;
+  position: absolute;
 }
 
-.at-share-btn-elements {
-  width: 50%;
-
+.footerImg {
+  width: 100%;
+  height: 20%;
 }
 
 .email-picture {
-  width: 10%;
+  width: 20%;
+  height: 100%;
+  margin-left: 51%;
+  margin-top: 0;
+  padding-bottom: 8px;
 }
 
+.mainFooter a:hover, .mainFooter a:visited {
+  background-color: #F0F8FF;
+  text-shadow: none;
+}
 
 /*Hangman!! */
 
 .the-word {
-  width: 500px;
-  margin: 0 auto;
+  width: 100%;
+  margin: 0px 0px 0px 570px;
+  text-decoration: underline;
 }
 
 .the-word div {
   float: left;
-  margin: 100px 10px 10px 0px;
+  margin: 150px 10px 10px 0px;
   font-weight: bold;
 }
 
 .letter-holder {
-  width: 30px;
+  border-bottom: 2px solid black;
+  width: 40px;
   height: auto
 }
 
 .letter {
   visibility: hidden;
-  width: 500px;
 }
 
-.letter- {
+.life-remaining, #lifeLeft {
+  font-size: 25px;
+  font-weight: bold;
+  float: left;
+}
 
+.life-text {
+  margin-left: 10px;
+}
+
+/* Message */
+
+.message-box {
+     visibility: hidden;
+     position: absolute;
+     left: 0px;
+     top: 0px;
+     width:100%;
+     height:100%;
+     text-align:center;
+     z-index: 1000;
+     background-color: rgba( 0, 0, 0, 0.8 );
+}
+
+.message-box div {
+     width: 200px;
+     margin: 100px auto;
+     background-color: #ADD8E6;
+     border:1px solid #000;
+     padding:15px;
+     text-align:center;
+}
+
+.message-button {
+background-color: #E0FFFF;
+color: #000;
+border-radius: 10%;
+border: none;
+font-size: 16px;
+}
+
+.message-button:hover {
+  background-color: #F0F8FF;
 }
