--- a/style.css
+++ b/style.css
@@ -84,6 +84,15 @@ display: inline;
   padding: 2% 3%;
 }
 
+.aside-video {
+  width: 21%;
+  float: right;
+  background-color: #FFF;
+  border-radius: 5px;
+  margin: 1.5% 0 2% 3%;
+  padding: 2% 3%;
+}
+
 .iframe {
   width: 95%;
 }
@@ -97,13 +106,30 @@ display: inline;
   background-color: #ADD8E6;
 }
 
+.mainFooter a:hover, .mainFooter a:visited {
+  background-color: #F0F8FF;
+  text-shadow: none;
+}
+
+/*!! Plugin Share buttons !!*/
+.addthis_inline_share_toolbox_t0le, .email-picture{
+  margin: 7px 1px 1px 32%;
+  position: absolute;
+}
+
+.email-picture {
+  width: 20%;
+  height: 100%;
+  margin-left: 51%;
+  margin-top: 0;
+  padding-bottom: 8px;
+}
+
 .deadline {
   font-size: 16px;
   color: #008000;
 }
 /* slut grundstyling */
-
-
 
 /*start CV-sida*/
 
@@ -121,7 +147,7 @@ display: inline;
 }
 
 .header-cv {
-  text-align:center;
+  text-align: center;
 }
 
 .toggleButton {
@@ -141,9 +167,24 @@ display: inline;
 }
 /* end CV */
 
+/* Special for the video */
+@media only screen and (min-width: 800px) and (max-width: 1500px) {
+  .aside-video {
+    width: 63%;
+    height: 400px;
+    float: left;
+    margin:0 ;
+  }
+
+  .iframe {
+    height: 400px;
+  }
+}
+
+/* End video*/
+
 /* Responsiv tablets */
-@media only screen and (min-width: 550px) and (max-width: 1024px)
-{
+@media only screen and (min-width: 550px) and (max-width: 800px) {
 
 .mainHeader img:first-child {
   width: 40%;
@@ -153,18 +194,20 @@ display: inline;
   display: none;
 }
 
+.aside-video {
+  width: 94%;
+}
 
 .iframe {
   width: 90%;
-  height: 200px;
+  height: 400px;
 }
 
 }
 /*End responsive tablets */
 
 /* Responsive phones*/
-@media only screen and (min-width: 150px) and (max-width: 550px)
-{
+@media only screen and (min-width: 150px) and (max-width: 550px) {
 
 body {
   width: 95%;
@@ -262,31 +305,11 @@ body {
 
 /*end countdown jquery*/
 
-/*!! Plugin Share buttons !!*/
-.addthis_inline_share_toolbox_t0le ,.email-picture{
-  margin: 7px 1px 1px 32%;
-  position: absolute;
-}
-
-.email-picture {
-  width: 20%;
-  height: 100%;
-  margin-left: 51%;
-  margin-top: 0;
-  padding-bottom: 8px;
-}
-
-.mainFooter a:hover, .mainFooter a:visited {
-  background-color: #F0F8FF;
-  text-shadow: none;
-}
-
 /*Hangman!! */
 
 .the-word {
-  width: 100%;
-  margin: 0 0 0 50%;
   text-decoration: underline;
+  margin-left: 37%;
 }
 
 .the-word div {
@@ -296,6 +319,7 @@ body {
 }
 
 .letterHolder {
+  padding-left: 20px;
   border-bottom: 2px solid black;
   width: 40px;
   height: auto
@@ -305,7 +329,7 @@ body {
   visibility: hidden;
 }
 
-.life-remaining, #lifeLeft {
+.life-remaining, #life-left {
   font-size: 25px;
   font-weight: bold;
   float: left;
@@ -329,6 +353,17 @@ body {
   display: none;
 }
 
+.update-game {
+  visibility: hidden;
+  width: 100px;
+  height: 30px;
+  margin: 2px 2px 20px 2px;
+  float: right;
+  border: none;
+  background-color: #ADD8E6;
+  border-radius: 10%;
+}
+
 /* Message */
 
 .message-box {
@@ -336,20 +371,20 @@ body {
      position: absolute;
      left: 0px;
      top: 0px;
-     width:100%;
-     height:100%;
-     text-align:center;
+     width: 100%;
+     height: 100%;
+     text-align:  center;
      z-index: 1000;
-     background-color: rgba( 0, 0, 0, 0.8 );
+     background-color: rgba( 0, 0, 0, 0.2 );
 }
 
 .message-box div {
      width: 200px;
      margin: 100px auto;
      background-color: #ADD8E6;
-     border:1px solid #000;
-     padding:15px;
-     text-align:center;
+     border: 1px solid #000;
+     padding: 15px;
+     text-align: center;
 }
 
 .message-button {
